--- a/public/labs/a3/css/index.css
+++ b/public/labs/a3/css/index.css
@@ -155,11 +155,11 @@ p#id-selector-2 {
     z-index: 10;
 }
 
-.float-left {
+.wd-float-left {
     float: left;
 }
 
-.float-right {
+.wd-float-right {
     float: right;
     height: 100px;
 }
