--- a/public/tuiter/css/index.css
+++ b/public/tuiter/css/index.css
@@ -1,16 +1,48 @@
 body {
     background-color: black;
-    margin-left: 16px;
     margin-right: 10px;
 }
 
-.wd-navigation {
-    color: grey;
+.wd-max-width-506 {
+    max-width: 506px;
+}
+
+/* Margins/ Padding/ Borders */
+.wd-margin-left-12 {
+    margin-left: 12px;
+}
+.wd-margin-left-16 {
+    margin-left: 16px;
+}
+.wd-margin-right-16 {
+    margin-right: 16px;
+}
+.wd-margin-top-10 {
+    margin-top: 10px;
+}
+.wd-margin-top-12 {
+    margin-top: 12px;
+}
+.wd-padding-bottom-12 {
+    padding-bottom: 12px;
+}
+.wd-padding-right-12 {
+    padding-right: 12px;
+}
+.wd-padding-all-12 {
+    padding: 12px;
+}
+.wd-border-style {
     border-color: rgb(47, 51, 54);
     border-style: solid;
-    color: rgb(110, 118, 125);
-
+    border-width: 1px;
 }
+.wd-border-bottom {
+    border-bottom-color: rgba(110, 118, 125, 0.5);
+    border-bottom-style: solid;
+    border-bottom-width: 1px;
+}
+
 .wd-rounded-edges {
     background-color: #2c2b2b;
     color: rgb(110, 118, 125);
@@ -19,10 +51,15 @@ body {
     border-color: #2c2b2b;
 }
 
-.wd-search-content {
-    margin-top: 10px;
+
+.wd-overflow-hidden {
     overflow: hidden;
-    position: relative;
+}
+.wd-overflow-auto {
+    overflow: auto;
+}
+.wd-overflow-break {
+    overflow-wrap: break-word;
 }
 
 .wd-search-field {
@@ -58,17 +95,34 @@ body {
     padding-bottom: 0px;
 }
 
-.wd-nav-section {
-    font-size: 15px;
+.wd-nav-tabs-no-underline {
     text-decoration-line: none;
 }
 
-.wd-first-nav {
+    /*Fonts*/
+.wd-font-color-blue {
     color: rgb(29, 161, 242);
 }
-
-.wd-shaded-nav {
+.wd-font-color-gray {
     color: rgb(110, 118, 125);
+}
+.wd-font-color-white {
+    color: white;
+}
+.wd-font-20 {
+    font-size: 20px;
+}
+.wd-font-15 {
+    font-size: 15px;
+}
+.wd-font-13 {
+    font-size: 13px;
+}
+.wd-font-weight {
+    font-weight: bold;
+}
+.wd-font {
+    font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif;
 }
 
 .wd-nav-section-underline {
@@ -94,55 +148,11 @@ body {
     padding-right: 10px;
 }
 
-.wd-tuit-list {
-    list-style: none;
-}
-
-.wd-tuit {
-    font-size: 13px;
-    color: rgb(110, 118, 125);
-    border-color: rgb(110, 118, 125);
-    border-style: solid;
-    opacity: 50%;
-    border: 1px;
-}
-
-.wd-tuit-image {
-    float: right;
-}
-
-.wd-tuit-text {
-    float: left;
-}
-
-.wd-tuit-title {
-    color: white;
-    font-weight: bold;
-}
-
-.wd-font {
-    font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif;
-}
-
 .wd-tuit-style {
     color: rgb(110, 118, 125);
     position: relative;
     padding: 15px;
-    font-size: 13px;
     overflow: auto;
-}
-
-.wd-border-bottom {
-    border-bottom-color: rgba(110, 118, 125, 0.5);
-    border-bottom-style: solid;
-    border-bottom-width: 1px;
-}
-
-.wd-box {
-    position: relative;
-    border-color: rgba(110, 118, 125, 0.5);
-    border-style: solid;
-    border-width: 1px;
 }
 
 .wd-tuit-image {
@@ -182,3 +192,39 @@ body {
 .wd-anchor-underline {
     text-decoration-line: none;
 }
+
+.wd-avatar-image-round {
+    width: 48px;
+    height: 48px;
+    vertical-align: -200%;
+    border-radius: 50%;
+    border-style: solid;
+    border-color: black;
+}
+
+.wd-flex-container-avatar {
+    display: flex;
+    flex-direction: row;
+    flex-basis: 48px;
+    position: relative;
+    align-items: stretch;
+}
+
+.wd-article-image {
+    width: 504px;
+    height: 264px;
+    background-size: cover;
+    background-position-x: 50%;
+    background-position-y: 50%;
+}
+
+.wd-article-text {
+    width: 504px;
+}
+
+.wd-border-round {
+    border-radius: 6%;
+    border-style: solid;
+    border-width: 1px;
+}
+
