--- a/public/tuiter/css/index.css
+++ b/public/tuiter/css/index.css
@@ -109,6 +109,12 @@ body {
 .wd-font-color-white {
     color: white;
 }
+.wd-font-color-pink {
+    color: rgb(249, 24, 128);
+}
+.wd-font-color-green {
+    color: rgb(0, 186, 124);
+}
 .wd-font-20 {
     font-size: 20px;
 }
@@ -214,17 +220,52 @@ body {
     width: 504px;
     height: 264px;
     background-size: cover;
-    background-position-x: 50%;
-    background-position-y: 50%;
 }
 
-.wd-article-text {
+.wd-article-image-only {
     width: 504px;
+    height: 500px;
+    background-size: cover;
+}
+
+.wd-width-504 {
+    width: 504px;
+}
+
+.wd-max-width-450 {
+    max-width: 450px;
 }
 
 .wd-border-round {
     border-radius: 6%;
     border-style: solid;
     border-width: 1px;
+    border-color: rgba(110, 118, 125, 0.5);
+}
+
+.wd-article-response-icons {
+    width: 18px;
+    height: 18px;
+    vertical-align: -10%;
+    padding-right: 12px;
+}
+
+.wd-article-response-share-icon {
+    width: 35px;
+    height: 20px;
+    vertical-align: -10%;
+    padding-right: 12px;
+}
+
+.wd-flex-container-article-response {
+    display: flex;
+    flex-direction: row;
+    align-items: baseline;
+    justify-content: space-between;
+    flex-basis: 100%;
+}
+
+.wd-retuit-icon-hover:hover {
+    color: rgb(0, 186, 124);
 }
 
