--- a/public/tuiter/css/index.css
+++ b/public/tuiter/css/index.css
@@ -191,7 +191,7 @@ body {
 
 .wd-gear-emoji {
     padding-right: 10px;
-    color: rgb(29, 161, 242);
+    color: white;
     font-size: 30px;
     text-decoration-line: none;
     justify-content: center;
