a4 bootstrap sp22 completed explore

--- a/public/tuiter/css/explore.css
+++ b/public/tuiter/css/explore.css
@@ -1,8 +1,8 @@
 
 .wd-search-field {
-    width: calc(80% - 35px);
+    width: calc(100% - 40px);
     font-weight: bold;
-    margin-left: 35px;
+    margin-left: 25px;
     height: 30px;
     padding-left: 35px;
     padding-right: 35px;
@@ -17,54 +17,11 @@
     border-color: #2c2b2b;
 }
 
-.wd-flex-container {
-    display: flex;
-    flex-direction: row;
-    align-items: baseline;
-    justify-content: space-between;
-    flex-basis: 100%;
-}
-
-.wd-flex-container .wd-nav-box {
-    text-align: center;
-    font-size: 30px;
-    font-weight: bold;
-    padding: 16px;
-    padding-bottom: 0px;
-}
-
-.wd-nav-section-underline {
-    width: 55px;
-    height: 4px;
-    margin-top: 20px;
-    border: rgb(29, 161, 242);
-    background-color: rgb(29, 161, 242);
-    border-radius: 50px;
-}
-
 .wd-shaded-section-break {
     height: 15px;
     width: 100%;
     color: rgb(110, 118, 125);
     opacity: 50%;
-}
-
-.wd-tuit-style {
-    color: rgb(110, 118, 125);
-    position: relative;
-    padding: 15px;
-    overflow: auto;
-}
-
-.wd-tuit-image {
-    align-items: stretch;
-    width: 100px;
-    height: 100px;
-    background-size: cover;
-    background-position-x: 50%;
-    background-position-y: 50%;
-    border-radius: 15%;
-    margin-right: 16px;
 }
 
 .wd-tuit-emoji {
@@ -73,22 +30,11 @@
     vertical-align: -20%;
 }
 
-.wd-tuit-emoji-round {
-    width: 16px;
-    height: 16px;
-    vertical-align: -20%;
-    border-radius: 50%;
-    border-style: solid;
-    border-width: 0.1px;
-    border-color: rgba(110, 118, 125, 0.5);
-}
-
 .wd-gear-emoji {
-    padding-right: 10px;
+    padding-right: 20px;
     color: white;
     font-size: 30px;
     text-decoration-line: none;
-    justify-content: center;
 }
 
 .wd-anchor-underline {
@@ -101,6 +47,10 @@
 }
 
 .list-group-item > a:active {
+    font-weight: bold;
+}
+
+.nav-link > a:active {
     font-weight: bold;
 }
 
@@ -120,18 +70,52 @@
     align-items: stretch;
 }
 
-.nav-tabs .nav-item.show .nav-link, .nav-tabs .nav-link.active {
+.nav-tabs .nav-link.active, .nav-tabs .nav-item:hover .nav-link {
+    color: white!important;
+    font-weight: bold;
     border-top: black;
     border-right: black;
     border-left: black;
     border-bottom: 3px solid rgb(29, 161, 242);
 }
 
-.wd-overflow {
-    overflow: hidden;
-    text-overflow: ellipsis;
-}
-
 .wd-white-space {
     white-space: nowrap;
+}
+
+.wd-tuit-button {
+    background-color: rgb(29, 161, 242);
+    border-color: rgb(29, 161, 242);
+}
+
+.wd-bottom-left {
+    position: absolute;
+    bottom: 8px;
+    left: 16px;
+    font-weight: bold;
+    font-size: 30px;
+}
+
+.wd-search-box {
+    position: relative;
+}
+
+.wd-search-box i {
+    position: absolute;
+    left: 35px;
+    top: 7px;
+    color: rgb(110, 118, 125);
+}
+
+.wd-follow-button {
+    margin-left: -20px;
+}
+
+.wd-gray {
+    color: rgb(110, 118, 125);
+
+}
+
+.wd-flex-grow {
+    flex-grow: 1;
 }
